# auth-api

./: .gitignore  ACCOUNT_LOCKING_FIX.md  Cargo.toml  README.md  env.example  test_db.rs
.github/workflows/: deploy.yaml
config/: README.md  default.toml  development.toml
examples/: README.md
migrations/2025-08-25-071141_create_enhanced_auth_schema/: down.sql  up.sql
migrations/2025-08-27-171953_create_new_enum_types/: down.sql  up.sql
migrations/2025-08-27-195741_create_performance_monitoring_tables/: down.sql  up.sql
migrations/2025-08-27-211316_create_testing_tables/: down.sql  up.sql
scripts/: make_admin.rs
src/: error.rs  lib.rs  main.rs  n.conf
src/config/: app.rs  database.rs  email.rs  geoip.rs  jwt.rs  mod.rs  security.rs  upload.rs
src/db/: mod.rs  model.rs  models.rs  schema.rs  schemas.rs
src/mail/: mod.rs
src/mail/templates/: email_change_verification.rs  mod.rs  password_change_confirmation.rs  password_reset.rs  verification.rs  verification_confirmation.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  role.rs
src/routes/: admin.rs  health.rs  mod.rs
src/routes/admin/: audit.rs  dashboard.rs  mod.rs  performance.rs  session_management.rs  system.rs  testing.rs  users.rs
src/routes/auth/: activity.rs  admin.rs  email.rs  email_verification.rs  login.rs  logout.rs  me.rs  mod.rs  otp.rs  password_change.rs  password_reset.rs  password_utils.rs  preferences.rs  profile.rs  profile_update.rs  refresh.rs  register.rs  reset.rs  session_management.rs  sessions.rs  two_factor.rs  upload.rs  user_management.rs  verify.rs
src/routes/uploads/: image.rs
src/services/: activity.rs  auth.rs  email.rs  file_upload.rs  geoip.rs  jwt.rs  mod.rs  otp.rs  password.rs  system.rs
src/services/core/: auth.rs  mod.rs  password.rs  session.rs  user.rs
src/services/file_upload/: file_manager.rs  file_upload.rs  image_processor.rs  mod.rs  types.rs  validator.rs
src/services/utils/: email.rs  mod.rs  system.rs
src/utils/: image_process.rs  jwt.rs  mod.rs  password.rs
static/: 24aa987b-9907-47ff-ae34-f82ef1d32bbf_Ocean_40_OBGA.MadeiraIslandPortugal_shutterstock_1121599244_Ocean_thumb.avif  50eee498-de81-429e-a1d8-0f6b89eb1347_untitled.avif  50eee498-de81-429e-a1d8-0f6b89eb1347_untitled_thumb.avif  596fb790-642a-474b-95bb-a30f4dad698d_20240309_thumb.avif  a792cbe9-7340-4dea-94e8-90ef70986b6e_Ocean_40_OBGA.MadeiraIslandPortugal_shutterstock_1121599244_Ocean.avif  b9c8e57f-0079-4b25-9826-abaf6c565601_20240309.avif
templates/: email_verification.html  password_reset_email.html  security_alert.html  two_factor_otp.html  welcome_email.html
