[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = { version = "4.11.0", features = ["openssl"] }
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["chrono", "postgres", "r2d2", "uuid"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
futures-util = "0.3.31"
image = "0.25.6"
lettre = "0.11.18"
log = "0.4.27"
num_cpus = "1.17.0"
ravif = "0.12.0"
rayon = "1.10.0"
rgb = "0.8.52"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.14"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
