[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = { version = "4.11.0", features = ["openssl"] }
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
dotenv = "0.15"
config = "0.14"
env_logger = "0.11.0"
futures-util = "0.3.31"
image = "0.25.6"
ravif = { version = "0.11.10", optional = true }
lettre = "0.11.18"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["fs"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
# Validation
validator = { version = "0.16", features = ["derive"] }
diesel_json = "0.2.1"
tera = "1.20.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[features]
default = []
avif-encoding = ["ravif"]

[dev-dependencies]
